plugins/kotlin/idea/tests/testData/multiModuleLineMarker/withOverloads/common/common.kt
expect fun <!LINE_MARKER("descr='Has actuals in jvm module'")!>foo<!>(): Int

expect fun <!LINE_MARKER("descr='Has actuals in jvm module'")!>foo<!>(arg: Int): Int
